Fix padding-left of tag cloud to align with other sidebar content.

--- a/bootstraped/templates/main.css
+++ b/bootstraped/templates/main.css
@@ -116,7 +116,7 @@ dd {
 
 ul.tagcloud {
   list-style: none;
-   padding: 0;
+  padding-left: 20px;
 }
 
 ul.tagcloud li {
